<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('staples', function (Blueprint $table) {
            $table->id();
            $table->string('slug')->unique();
            $table->string('name_da');
            $table->string('category')->nullable()->index();
            $table->string('default_unit');
            $table->text('notes')->nullable();
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('staples');
    }
};
